minor change, heroku deployment test

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,6 @@
   <title>node-chat-app</title>
 </head>
 <body>
-<p>Welcome to Chat App!</p>
+<p>Welcome to the new heroku deployed Chat App!</p>
 </body>
 </html>
